--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,6 +21,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "rules": {
+    "import/no-unresolved": "off",
     "react/jsx-filename-extension": ["off"],
     "react/function-component-definition": [
       2,
