--- a/client/package.json
+++ b/client/package.json
@@ -46,8 +46,12 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.10.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "styled-components": "^6.1.0"
   }
 }
