--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -46,12 +47,17 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.1",
     "electron-squirrel-startup": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
-    "styled-components": "^6.1.0"
+    "react-router-dom": "^6.17.0",
+    "styled-components": "^6.1.0",
+    "yup": "^1.3.2"
   }
 }
