--- a/client/package.json
+++ b/client/package.json
@@ -50,11 +50,13 @@
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.1",
+    "axios": "^1.5.1",
     "electron-squirrel-startup": "^1.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0",
