--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.1",
@@ -56,7 +57,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0",
