added security to client

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -52,6 +52,9 @@
     "no-use-before-define":  [
       "off"
     ],
+    "import/extensions": [
+      "off"
+    ],
     "@typescript-eslint/ban-types": [
       "off"
     ],
