--- a/client/package.json
+++ b/client/package.json
@@ -53,12 +53,15 @@
     "antd": "^5.10.1",
     "axios": "^1.5.1",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0",
     "yup": "^1.3.2"
   }
