--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+      "$main": ["src/*"]
     },
     "jsx": "react"
   },
