--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -52,6 +52,9 @@
     "no-use-before-define":  [
       "off"
     ],
+    "linebreak-style": [
+      "off"
+    ],
     "import/extensions": [
       "off"
     ],
